Shopping Cart Commit

--- a/HTML - Pages/Main_Page.html
+++ b/HTML - Pages/Main_Page.html
@@ -11,7 +11,7 @@
 <body>
 <header>
     <div class = "blue_panel">
-        <a href = "#" class = "logo_dungeon_goodies" title = "Place for logo"></a>
+        <a href = "Main_Page.html" class = "logo_dungeon_goodies" title = "Place for logo"></a>
 
         <div class = "types">
             <a href = "#" class = "link_type products">Products</a>
@@ -32,11 +32,11 @@
         </div>
 
         <div class = "button_part">
-            <button class = "btn shopping_cart">
+            <a href = "Shopping_Cart.html" class = "btn shopping_cart">
                 <svg viewBox = "0 0 24 24" width="24" height="24">
                     <path fill = "currentColor" d="M7 4h-2l-1 2h2l3 6-1.2 2.2c-.2.3-.2.6-.2.8 0 .8.6 1.4 1.4 1.4h10v-2h-9.4l.8-1.6h5.8c.6 0 1-.4 1.2-.9l2.4-4.5c.1-.2.1-.4.1-.6 0-.5-.4-.9-.9-.9h-11.6l-.7-2zm5 14c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm7 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
                 </svg>
-            </button>
+            </a>
         </div>
     </div>
 </header>
@@ -56,20 +56,20 @@
         </div>
     </section>
 
-    <section class="new_arrivals">
+    <section class = "new_arrivals">
         <h2>New Arrivals</h2>
         <p>Click to see more</p>
 
-        <div class="scroller">
-            <button class="scroller_button left">&#10094;</button>
+        <div class = "scroller">
+            <button class = "scroller_button left">&#10094;</button>
 
-            <div class="scroller_items">
+            <div class = "scroller_items">
                 <div class = "item">Manga 1</div>
                 <div class = "item">Manga 2</div>
                 <div class = "item">Manga 3</div>
             </div>
 
-            <button class="scroller_button right">&#10095;</button>
+            <button class = "scroller_button right">&#10095;</button>
         </div>
     </section>
 
