--- a/HTML - Pages/Main_Page.html
+++ b/HTML - Pages/Main_Page.html
@@ -8,6 +8,8 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0"/>
 </head>
 
+<!-- milujem github -->
+
 <body>
 <header>
     <div class = "blue_panel">
