Ucim sa gitbuh na webstorme zas a znova

--- a/HTML - Pages/Main_Page.html
+++ b/HTML - Pages/Main_Page.html
@@ -9,6 +9,10 @@
 </head>
 
 <!-- milujem github -->
+<!-- milujem github -->
+<!-- milujem github -->
+<!-- milujem github -->
+<!-- milujem github -->
 
 <body>
 <header>
