--- a/HTML - Pages/Product_Page.html
+++ b/HTML - Pages/Product_Page.html
@@ -20,20 +20,10 @@
         <div class = "buttons">
             <button class = "btn sign_in">Sign in/out</button>
             <button class = "btn register">Register</button>
-        </div>
-    </div>
 
-    <div class = "pink_panel">
-        <div class = "types">
-            <a href = "#" class="link_type">Manga</a>
-            <a href = "#" class="link_type">Comics</a>
-            <a href = "#" class="link_type">Funko POP!</a>
-        </div>
-
-        <div class = "button_part">
-            <a href = "Shopping_Cart.html" class = "btn shopping_cart">
-                <svg viewBox = "0 0 24 24" width="24" height="24">
-                    <path fill = "currentColor" d="M7 4h-2l-1 2h2l3 6-1.2 2.2c-.2.3-.2.6-.2.8 0 .8.6 1.4 1.4 1.4h10v-2h-9.4l.8-1.6h5.8c.6 0 1-.4 1.2-.9l2.4-4.5c.1-.2.1-.4.1-.6 0-.5-.4-.9-.9-.9h-11.6l-.7-2zm5 14c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm7 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
+            <a href = "Shopping_Cart.html" class = "shopping_cart_btn" title = "View Cart">
+                <svg viewBox = "0 0 24 24" width = "24" height = "24">
+                    <path fill = "currentColor" d = "M7 4h-2l-1 2h2l3 6-1.2 2.2c-.2.3-.2.6-.2.8 0 .8.6 1.4 1.4 1.4h10v-2h-9.4l.8-1.6h5.8c.6 0 1-.4 1.2-.9l2.4-4.5c.1-.2.1-.4.1-.6 0-.5-.4-.9-.9-.9h-11.6l-.7-2zm5 14c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm7 0c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"/>
                 </svg>
             </a>
         </div>
@@ -49,8 +39,9 @@
             <span class="tag">Comics ✖</span>
             <span class="tag">Funko POP! ✖</span>
         </div>
-        <label>Price</label>
-        <input type="range" min="0" max="100" value="100">
+        <label> Price
+            <input type="range" min="0" max="100" value="100">
+        </label>
         <div class="product-type">
             <label><input type="checkbox" checked> Manga</label>
             <label><input type="checkbox" checked> Comics</label>
