finally fixed header in Product_Page.css

--- a/HTML - Pages/Product_Page.html
+++ b/HTML - Pages/Product_Page.html
@@ -8,6 +8,7 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0"/>
 </head>
 
+<body>
 <header>
     <div class = "blue_panel">
         <a href = "Main_Page.html" class = "logo_dungeon_goodies" title = "Place for logo"></a>
@@ -30,7 +31,7 @@
     </div>
 </header>
 
-<body>
+
 <div class="container">
     <aside class="filter-panel">
         <h3>Filter</h3>
@@ -48,7 +49,7 @@
             <label><input type="checkbox" checked> Funko POP!</label>
         </div>
     </aside>
-    <section class="products">
+    <section class="products-grid">
         <div class="sort-options">
             <button class="active">New</button>
             <button>Price ascending</button>
