--- a/HTML - Pages/Shopping_Cart.html
+++ b/HTML - Pages/Shopping_Cart.html
@@ -92,7 +92,7 @@
 
     <div class = "total_price_and_btn">
       <span class = "total_price">62.98 €</span>
-      <button class = "buy_btn">BUY</button>
+      <a href = "Delivery.html" class = "buy_btn">BUY</a>
     </div>
   </div>
 
