# Updated Delivery.css ang Delivery.html

--- a/HTML - Pages/Delivery.html
+++ b/HTML - Pages/Delivery.html
@@ -4,7 +4,7 @@
 <head>
   <title>Dungeon Goodies</title>
   <meta charset = "UTF-8"/>
-  <link href = "../CSS - Files/Shopping_Cart.css" rel = "stylesheet"/>
+  <link href = "../CSS - Files/Delivery.css" rel = "stylesheet"/>
   <meta name = "viewport" content = "width=device-width, initial-scale=1.0"/>
 </head>
 
@@ -30,6 +30,65 @@
     </div>
   </div>
 </header>
+
+<section class="delivery-payment">
+  <h2>Delivery & Payment</h2>
+
+  <form class="delivery-form">
+    <div class="form-field">
+      <label for="email">Email address:</label>
+      <input type="email" id="email" placeholder="Insert text">
+    </div>
+    <div class="form-field">
+      <label for="first-name">First name:</label>
+      <input type="text" id="first-name" placeholder="Insert text">
+    </div>
+    <div class="form-field">
+      <label for="last-name">Last name:</label>
+      <input type="text" id="last-name" placeholder="Insert text">
+    </div>
+    <div class="form-field">
+      <label for="state">State:</label>
+      <input type="text" id="state" placeholder="Insert text">
+    </div>
+    <div class="form-field">
+      <label for="city">City:</label>
+      <input type="text" id="city" placeholder="Insert text">
+    </div>
+    <div class="form-field">
+      <label for="postal-code">Postal code:</label>
+      <input type="text" id="postal-code" placeholder="Insert text">
+    </div>
+    <div class="form-field">
+      <label for="phone">Phone number:</label>
+      <input type="tel" id="phone" placeholder="Insert text">
+    </div>
+  </form>
+
+  <div class="transport-section">
+    <h3>Mode of transport</h3>
+
+    <ul class="transport-options">
+      <li>
+        <span class="icon">⭐</span>
+        <span class="company-name">Delivery Company Name 1</span>
+        <span class="price">5.99 €</span>
+      </li>
+      <li>
+        <span class="icon">⭐</span>
+        <span class="company-name">Delivery Company Name 2</span>
+        <span class="price">6.99 €</span>
+      </li>
+      <li>
+        <span class="icon">⭐</span>
+        <span class="company-name">Delivery Company Name 3</span>
+        <span class="price">7.99 €</span>
+      </li>
+    </ul>
+
+    <button class="buy-button">Buy</button>
+  </div>
+</section>
 
 <footer>
   <div class = "bottom_panel">
