Just finished Delivery & Payment pages both .html and .css

--- a/HTML - Pages/Delivery.html
+++ b/HTML - Pages/Delivery.html
@@ -68,23 +68,28 @@
   <div class="transport-section">
     <h3>Mode of transport</h3>
 
-    <ul class="transport-options">
-      <li>
-        <span class="icon">⭐</span>
-        <span class="company-name">Delivery Company Name 1</span>
+    <div class="delivery-choice">
+      <label class="delivery-option">
+        <input type="radio" name="delivery" value="sps">
+        <span class="star">★</span>
+        <span class="label-text">SPS</span>
         <span class="price">5.99 €</span>
-      </li>
-      <li>
-        <span class="icon">⭐</span>
-        <span class="company-name">Delivery Company Name 2</span>
+      </label>
+
+      <label class="delivery-option">
+        <input type="radio" name="delivery" value="packet">
+        <span class="star">★</span>
+        <span class="label-text">Packet</span>
         <span class="price">6.99 €</span>
-      </li>
-      <li>
-        <span class="icon">⭐</span>
-        <span class="company-name">Delivery Company Name 3</span>
+      </label>
+
+      <label class="delivery-option">
+        <input type="radio" name="delivery" value="upc">
+        <span class="star">★</span>
+        <span class="label-text">UPC Box</span>
         <span class="price">7.99 €</span>
-      </li>
-    </ul>
+      </label>
+    </div>
 
     <button class="buy-button">Buy</button>
   </div>
