--- a/HTML - Pages/Shopping_Cart.html
+++ b/HTML - Pages/Shopping_Cart.html
@@ -42,7 +42,7 @@
       <div class = "cart_product_info">
         <h2 class = "product_name">Sakamoto Days 1</h2>
 
-        <p class = "product_info">Product info</p>
+        <p class = "product_info">Manga</p>
 
         <button class = "remove_btn">Remove</button>
 
@@ -68,7 +68,7 @@
       <div class = "cart_product_info">
         <h2 class = "product_name">The Walking Dead Compendium Vol. 1</h2>
 
-        <p class = "product_info">Product info</p>
+        <p class = "product_info">Comics</p>
 
         <button class = "remove_btn">Remove</button>
 
