Fixed hearths and text on Product_Page.html and Product_Page.css

--- a/HTML - Pages/Product_Page.html
+++ b/HTML - Pages/Product_Page.html
@@ -8,10 +8,6 @@
     <meta name = "viewport" content = "width=device-width, initial-scale=1.0"/>
 </head>
 
-
-
-
-
 <body>
 <header>
     <div class = "blue_panel">
@@ -34,7 +30,6 @@
         </div>
     </div>
 </header>
-
 
 <div class="container">
     <aside class="filter-panel">
@@ -62,40 +57,40 @@
         </div>
         <div class="product-list">
             <div class="product">
-                <div class="heart">♡</div>
-                <div class="image"></div>
-                <p>Sakamoto Days 1</p>
-                <p>€12.99</p>
+                <div class="image">
+                <div class="heart">♡</div></div>
+                <p class = "product_name">Sakamoto Days 1</p>
+                <p class = "product_price">€12.99</p>
             </div>
             <div class="product">
-                <div class="heart">♡</div>
-                <div class="image"></div>
-                <p>Sakamoto Days 2</p>
-                <p>€12.99</p>
+                <div class="image">
+                <div class="heart">♡</div></div>
+                <p class = "product_name">Sakamoto Days 2</p>
+                <p class = "product_price">€12.99</p>
             </div>
             <div class="product">
-                <div class="heart">♡</div>
-                <div class="image"></div>
-                <p>The Walking Dead Compendium Vol.1</p>
-                <p>€49.99</p>
+                <div class="image">
+                <div class="heart">♡</div></div>
+                <p class = "product_name">The Walking Dead Compendium Vol.1</p>
+                <p class = "product_price">€49.99</p>
             </div>
             <div class="product">
-                <div class="heart">♡</div>
-                <div class="image"></div>
-                <p>Funko Pop! - SandMan</p>
-                <p>€15.99</p>
+                <div class="image">
+                <div class="heart">♡</div></div>
+                <p class = "product_name"> Funko Pop! - SandMan</p>
+                <p class = "product_price">€15.99</p>
             </div>
             <div class="product">
-                <div class="heart">♡</div>
-                <div class="image"></div>
-                <p>Funko Pop! - Zombie Wolverine</p>
-                <p>€15.99</p>
+                <div class="image">
+                <div class="heart">♡</div></div>
+                <p class = "product_name">Funko Pop! - Zombie Wolverine</p>
+                <p class = "product_price">€15.99</p>
             </div>
             <div class="product">
-                <div class="heart">♡</div>
-                <div class="image"></div>
-                <p>Funko Pop! - Shrimp Rick</p>
-                <p>€15.99</p>
+                <div class="image">
+                <div class="heart">♡</div></div>
+                <p class = "product_name">Funko Pop! - Shrimp Rick</p>
+                <p class = "product_price">€15.99</p>
             </div>
         </div>
     </section>
