Added Sales.html, Connected everything together

--- a/HTML - Pages/Main_Page.html
+++ b/HTML - Pages/Main_Page.html
@@ -14,8 +14,8 @@
         <a href = "Main_Page.html" class = "logo_dungeon_goodies" title = "Place for logo"></a>
 
         <div class = "types">
-            <a href = "#" class = "link_type products">Products</a>
-            <a href = "#" class = "link_type sales">Sales</a>
+            <a href = "Product_Page.html" class = "link_type products">Products</a>
+            <a href = "Sales.html" class = "link_type sales">Sales</a>
         </div>
 
         <div class = "buttons">
