--- a/HTML - Pages/Sales.html
+++ b/HTML - Pages/Sales.html
@@ -61,39 +61,45 @@
         <div class="product-list">
             <div class="product">
                 <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">Sakamoto Days 1</p>
-                <p class = "product_price">€12.99</p>
+                    <div class="heart">♡</div></div>
+                <p class = "product_name">Junji Ito - Uzumaki</p>
+                <s class = "product_price">€12.99</s>
+                <p class = "sale_price">€10.99</p>
             </div>
             <div class="product">
                 <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">Sakamoto Days 2</p>
-                <p class = "product_price">€12.99</p>
+                    <div class="heart">♡</div></div>
+                <p class = "product_name">Wolverine: Old Man Logan</p>
+                <s class = "product_price">€12.99</s>
+                <p class = "sale_price">€10.99</p>
             </div>
             <div class="product">
                 <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">The Walking Dead Compendium Vol.1</p>
-                <p class = "product_price">€49.99</p>
+                    <div class="heart">♡</div></div>
+                <p class = "product_name">Fell Vol.1</p>
+                <s class = "product_price">€12.99</s>
+                <p class = "sale_price">€39.99</p>
             </div>
             <div class="product">
                 <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name"> Funko Pop! - SandMan</p>
-                <p class = "product_price">€15.99</p>
+                    <div class="heart">♡</div></div>
+                <p class = "product_name"> Funko Pop! - The Batman</p>
+                <s class = "product_price">€15.99</s>
+                <p class = "sale_price">€12.99</p>
             </div>
             <div class="product">
                 <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">Funko Pop! - Zombie Wolverine</p>
-                <p class = "product_price">€15.99</p>
+                    <div class="heart">♡</div></div>
+                <p class = "product_name">Funko Pop! - Nebula</p>
+                <s class = "product_price">€15.99</s>
+                <p class = "sale_price">€12.99</p>
             </div>
             <div class="product">
                 <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">Funko Pop! - Shrimp Rick</p>
-                <p class = "product_price">€15.99</p>
+                    <div class="heart">♡</div></div>
+                <p class = "product_name">Funko Pop! - Spider-Man</p>
+                <s class = "product_price">€15.99</s>
+                <p class = "sale_price">€12.99</p>
             </div>
         </div>
     </section>
