--- a/HTML - Pages/Sales.html
+++ b/HTML - Pages/Sales.html
@@ -61,6 +61,7 @@
         <div class="product-list">
             <div class="product">
                 <div class="image">
+                    <div class="sale-banner">ON SALE</div>
                     <div class="heart">♡</div></div>
                 <p class = "product_name">Junji Ito - Uzumaki</p>
                 <s class = "product_price">€12.99</s>
@@ -68,6 +69,7 @@
             </div>
             <div class="product">
                 <div class="image">
+                    <div class="sale-banner">ON SALE</div>
                     <div class="heart">♡</div></div>
                 <p class = "product_name">Wolverine: Old Man Logan</p>
                 <s class = "product_price">€12.99</s>
@@ -75,6 +77,7 @@
             </div>
             <div class="product">
                 <div class="image">
+                    <div class="sale-banner">ON SALE</div>
                     <div class="heart">♡</div></div>
                 <p class = "product_name">Fell Vol.1</p>
                 <s class = "product_price">€12.99</s>
@@ -82,6 +85,7 @@
             </div>
             <div class="product">
                 <div class="image">
+                    <div class="sale-banner">ON SALE</div>
                     <div class="heart">♡</div></div>
                 <p class = "product_name"> Funko Pop! - The Batman</p>
                 <s class = "product_price">€15.99</s>
@@ -89,6 +93,7 @@
             </div>
             <div class="product">
                 <div class="image">
+                    <div class="sale-banner">ON SALE</div>
                     <div class="heart">♡</div></div>
                 <p class = "product_name">Funko Pop! - Nebula</p>
                 <s class = "product_price">€15.99</s>
@@ -96,6 +101,7 @@
             </div>
             <div class="product">
                 <div class="image">
+                    <div class="sale-banner">ON SALE</div>
                     <div class="heart">♡</div></div>
                 <p class = "product_name">Funko Pop! - Spider-Man</p>
                 <s class = "product_price">€15.99</s>
