--- a/HTML - Pages/Shopping_Cart.html
+++ b/HTML - Pages/Shopping_Cart.html
@@ -49,7 +49,9 @@
         <div class = "amount_check">
           <button class = "amount_btn minus_btn">-</button>
 
-          <input type = "text" class = "amount_num" value = "1" />
+          <label>
+            <input type = "text" class = "amount_num" value = "1" />
+          </label>
 
           <button class = "amount_btn plus_btn">+</button>
         </div>
@@ -75,7 +77,9 @@
         <div class = "amount_check">
           <button class = "amount_btn minus_btn">-</button>
 
-          <input type = "text" class = "amount_num" value="1" />
+          <label>
+            <input type = "text" class = "amount_num" value="1" />
+          </label>
 
           <button class = "amount_btn plus_btn">+</button>
         </div>
