--- a/HTML - Pages/Main_Page.html
+++ b/HTML - Pages/Main_Page.html
@@ -26,9 +26,9 @@
 
     <div class = "pink_panel">
         <div class = "types">
-            <a href = "#" class="link_type">Manga</a>
-            <a href = "#" class="link_type">Comics</a>
-            <a href = "#" class="link_type">Funko POP!</a>
+            <a href = "Product_Page.html" class="link_type">Manga</a>
+            <a href = "Product_Page.html" class="link_type">Comics</a>
+            <a href = "Product_Page.html" class="link_type">Funko POP!</a>
         </div>
 
         <div class = "button_part">
