--- a/HTML - Pages/Sales.html
+++ b/HTML - Pages/Sales.html
@@ -59,54 +59,66 @@
             <button>Rating</button>
         </div>
         <div class="product-list">
-            <div class="product">
-                <div class="image">
-                    <div class="sale-banner">ON SALE</div>
-                    <div class="heart">♡</div></div>
-                <p class = "product_name">Junji Ito - Uzumaki</p>
-                <s class = "product_price">€12.99</s>
-                <p class = "sale_price">€10.99</p>
-            </div>
-            <div class="product">
-                <div class="image">
-                    <div class="sale-banner">ON SALE</div>
-                    <div class="heart">♡</div></div>
-                <p class = "product_name">Wolverine: Old Man Logan</p>
-                <s class = "product_price">€12.99</s>
-                <p class = "sale_price">€10.99</p>
-            </div>
-            <div class="product">
-                <div class="image">
-                    <div class="sale-banner">ON SALE</div>
-                    <div class="heart">♡</div></div>
-                <p class = "product_name">Fell Vol.1</p>
-                <s class = "product_price">€12.99</s>
-                <p class = "sale_price">€39.99</p>
-            </div>
-            <div class="product">
-                <div class="image">
-                    <div class="sale-banner">ON SALE</div>
-                    <div class="heart">♡</div></div>
-                <p class = "product_name"> Funko Pop! - The Batman</p>
-                <s class = "product_price">€15.99</s>
-                <p class = "sale_price">€12.99</p>
-            </div>
-            <div class="product">
-                <div class="image">
-                    <div class="sale-banner">ON SALE</div>
-                    <div class="heart">♡</div></div>
-                <p class = "product_name">Funko Pop! - Nebula</p>
-                <s class = "product_price">€15.99</s>
-                <p class = "sale_price">€12.99</p>
-            </div>
-            <div class="product">
-                <div class="image">
-                    <div class="sale-banner">ON SALE</div>
-                    <div class="heart">♡</div></div>
-                <p class = "product_name">Funko Pop! - Spider-Man</p>
-                <s class = "product_price">€15.99</s>
-                <p class = "sale_price">€12.99</p>
-            </div>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                        <div class="sale-banner">ON SALE</div>
+                        <div class="heart">♡</div></div>
+                    <p class = "product_name">Junji Ito - Uzumaki</p>
+                    <s class = "product_price">€12.99</s>
+                    <p class = "sale_price">€10.99</p>
+                </div>
+            </a>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                        <div class="sale-banner">ON SALE</div>
+                        <div class="heart">♡</div></div>
+                    <p class = "product_name">Wolverine: Old Man Logan</p>
+                    <s class = "product_price">€12.99</s>
+                    <p class = "sale_price">€10.99</p>
+                </div>
+            </a>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                        <div class="sale-banner">ON SALE</div>
+                        <div class="heart">♡</div></div>
+                    <p class = "product_name">Fell Vol.1</p>
+                    <s class = "product_price">€12.99</s>
+                    <p class = "sale_price">€39.99</p>
+                </div>
+            </a>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                        <div class="sale-banner">ON SALE</div>
+                        <div class="heart">♡</div></div>
+                    <p class = "product_name"> Funko Pop! - The Batman</p>
+                    <s class = "product_price">€15.99</s>
+                    <p class = "sale_price">€12.99</p>
+                </div>
+            </a>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                        <div class="sale-banner">ON SALE</div>
+                        <div class="heart">♡</div></div>
+                    <p class = "product_name">Funko Pop! - Nebula</p>
+                    <s class = "product_price">€15.99</s>
+                    <p class = "sale_price">€12.99</p>
+                </div>
+            </a>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                        <div class="sale-banner">ON SALE</div>
+                        <div class="heart">♡</div></div>
+                    <p class = "product_name">Funko Pop! - Spider-Man</p>
+                    <s class = "product_price">€15.99</s>
+                    <p class = "sale_price">€12.99</p>
+                </div>
+            </a>
         </div>
     </section>
 </div>
