--- a/HTML - Pages/Product_Page.html
+++ b/HTML - Pages/Product_Page.html
@@ -59,42 +59,52 @@
             <button>Rating</button>
         </div>
         <div class="product-list">
-            <div class="product">
-                <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">Sakamoto Days 1</p>
-                <p class = "product_price">€12.99</p>
-            </div>
-            <div class="product">
-                <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">Sakamoto Days 2</p>
-                <p class = "product_price">€12.99</p>
-            </div>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                    <div class="heart">♡</div></div>
+                    <p class = "product_name">Sakamoto Days 1</p>
+                    <p class = "product_price">€12.99</p>
+                </div>
+            </a>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                    <div class="heart">♡</div></div>
+                    <p class = "product_name">Sakamoto Days 2</p>
+                    <p class = "product_price">€12.99</p>
+                </div>
+            </a>
             <div class="product">
                 <div class="image">
                 <div class="heart">♡</div></div>
                 <p class = "product_name">The Walking Dead Compendium Vol.1</p>
                 <p class = "product_price">€49.99</p>
             </div>
-            <div class="product">
-                <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name"> Funko Pop! - SandMan</p>
-                <p class = "product_price">€15.99</p>
-            </div>
-            <div class="product">
-                <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">Funko Pop! - Zombie Wolverine</p>
-                <p class = "product_price">€15.99</p>
-            </div>
-            <div class="product">
-                <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">Funko Pop! - Shrimp Rick</p>
-                <p class = "product_price">€15.99</p>
-            </div>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                    <div class="heart">♡</div></div>
+                    <p class = "product_name"> Funko Pop! - SandMan</p>
+                    <p class = "product_price">€15.99</p>
+                </div>
+            </a>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                    <div class="heart">♡</div></div>
+                    <p class = "product_name">Funko Pop! - Zombie Wolverine</p>
+                    <p class = "product_price">€15.99</p>
+                </div>
+            </a>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                    <div class="heart">♡</div></div>
+                    <p class = "product_name">Funko Pop! - Shrimp Rick</p>
+                    <p class = "product_price">€15.99</p>
+                </div>
+            </a>
         </div>
     </section>
 </div>
