Added more links into Main_Page

--- a/HTML - Pages/Main_Page.html
+++ b/HTML - Pages/Main_Page.html
@@ -64,9 +64,9 @@
             <button class = "scroller_button left">&#10094;</button>
 
             <div class = "scroller_items">
-                <div class = "item">Manga 1</div>
-                <div class = "item">Manga 2</div>
-                <div class = "item">Manga 3</div>
+                <a href = "Product_Detail.html" class = "item">Manga 1</a>
+                <a href = "Product_Detail.html" class = "item">Manga 2</a>
+                <a href = "Product_Detail.html" class = "item">Manga 3</a>
             </div>
 
             <button class = "scroller_button right">&#10095;</button>
@@ -81,9 +81,9 @@
             <button class = "scroller_button left">&#10094;</button>
 
             <div class = "scroller_items">
-                <div class = "item">Funko 1</div>
-                <div class = "item">Funko 2</div>
-                <div class = "item">Funko 3</div>
+                <a href = "Product_Detail.html" class = "item">Funko 1</a>
+                <a href = "Product_Detail.html" class = "item">Funko 2</a>
+                <a href = "Product_Detail.html" class = "item">Funko 3</a>
             </div>
 
             <button class = "scroller_button right">&#10095;</button>
