Linked Admin Page, Updated Product_Detail

--- a/HTML - Pages/Admin_Page.html
+++ b/HTML - Pages/Admin_Page.html
@@ -30,7 +30,7 @@
 <footer>
     <div class = "bottom_panel">
         <div class = "logo_part">
-            <a href = "#" class = "logo_dungeon_goodies" title = "Place for logo"></a>
+            <a href = "Admin_Page.html" class = "logo_dungeon_goodies" title = "Place for logo"></a>
         </div>
 
         <div class = "information_text">
