--- a/HTML - Pages/Product_Detail.html
+++ b/HTML - Pages/Product_Detail.html
@@ -42,7 +42,9 @@
                 <p class="price">€12.99</p>
                 <p class="category">Manga</p>
                 <div class="button-container">
-                    <button class="favorite">♡ Add to Favourites</button>
+                    <button class="favorite">
+                        <span class="heart-icon">♡</span> Add to Favourites
+                    </button>
                     <button class="buy">🛒 Buy</button>
                 </div>
                 <div class="about">
@@ -99,7 +101,7 @@
 <footer>
     <div class = "bottom_panel">
         <div class = "logo_part">
-            <a href = "#" class = "logo_dungeon_goodies" title = "Place for logo"></a>
+            <a href = "Admin_Page.html" class = "logo_dungeon_goodies" title = "Place for logo"></a>
         </div>
 
         <div class = "information_text">
