--- a/HTML - Pages/Product_Page.html
+++ b/HTML - Pages/Product_Page.html
@@ -79,12 +79,14 @@
                     <p class = "product_price">€12.99</p>
                 </div>
             </a>
-            <div class="product">
-                <div class="image">
-                <div class="heart">♡</div></div>
-                <p class = "product_name">The Walking Dead Compendium Vol.1</p>
-                <p class = "product_price">€49.99</p>
-            </div>
+            <a href="Product_Detail.html" class="product-link">
+                <div class="product">
+                    <div class="image">
+                        <div class="heart">♡</div></div>
+                    <p class = "product_name">The Walking Dead Compendium Vol.1</p>
+                    <p class = "product_price">€49.99</p>
+                </div>
+            </a>
             <a href="Product_Detail.html" class="product-link">
                 <div class="product">
                     <div class="image">
@@ -116,7 +118,7 @@
 <footer>
     <div class = "bottom_panel">
         <div class = "logo_part">
-            <a href = "#" class = "logo_dungeon_goodies" title = "Place for logo"></a>
+            <a href = "Admin_Page.html" class = "logo_dungeon_goodies" title = "Place for logo"></a>
         </div>
 
         <div class = "information_text">
