--- a/HTML - Pages/Shopping_Cart.html
+++ b/HTML - Pages/Shopping_Cart.html
@@ -37,10 +37,12 @@
   <div class = "cart_product">
     <div class = "cart_product_left">
 
-      <div class="cart_product_image"></div>
+      <a href = "Product_Detail.html" class="cart_product_image"></a>
 
       <div class = "cart_product_info">
-        <h2 class = "product_name">Sakamoto Days 1</h2>
+        <h2 class = "product_name">
+          <a href = "Product_Detail.html">Sakamoto Days 1</a>
+        </h2>
 
         <p class = "product_info">Manga</p>
 
@@ -65,10 +67,12 @@
 
   <div class = "cart_product">
     <div class = "cart_product_left">
-      <div class = "cart_product_image"></div>
+      <a href = "Product_Detail.html" class = "cart_product_image"></a>
 
       <div class = "cart_product_info">
-        <h2 class = "product_name">The Walking Dead Compendium Vol. 1</h2>
+        <h2 class = "product_name">
+          <a href = "Product_Detail.html">The Walking Dead Compendium Vol. 1</a>
+        </h2>
 
         <p class = "product_info">Comics</p>
 
@@ -105,7 +109,7 @@
 <footer>
   <div class = "bottom_panel">
     <div class = "logo_part">
-      <a href = "#" class = "logo_dungeon_goodies" title = "Place for logo"></a>
+      <a href = "Admin_Page.html" class = "logo_dungeon_goodies" title = "Place for logo"></a>
     </div>
 
     <div class = "information_text">
