--- a/HTML - Pages/Sales.html
+++ b/HTML - Pages/Sales.html
@@ -71,6 +71,7 @@
                     <p class = "product_name">Junji Ito - Uzumaki</p>
                     <s class = "product_price">€12.99</s>
                     <p class = "sale_price">€10.99</p>
+                    <button class="buy-btn">Buy</button>
                 </div>
             </a>
             <a href="Product_Detail.html" class="product-link">
@@ -81,6 +82,7 @@
                     <p class = "product_name">Wolverine: Old Man Logan</p>
                     <s class = "product_price">€12.99</s>
                     <p class = "sale_price">€10.99</p>
+                    <button class="buy-btn">Buy</button>
                 </div>
             </a>
             <a href="Product_Detail.html" class="product-link">
@@ -91,6 +93,7 @@
                     <p class = "product_name">Fell Vol.1</p>
                     <s class = "product_price">€12.99</s>
                     <p class = "sale_price">€39.99</p>
+                    <button class="buy-btn">Buy</button>
                 </div>
             </a>
             <a href="Product_Detail.html" class="product-link">
@@ -101,6 +104,7 @@
                     <p class = "product_name"> Funko Pop! - The Batman</p>
                     <s class = "product_price">€15.99</s>
                     <p class = "sale_price">€12.99</p>
+                    <button class="buy-btn">Buy</button>
                 </div>
             </a>
             <a href="Product_Detail.html" class="product-link">
@@ -111,6 +115,7 @@
                     <p class = "product_name">Funko Pop! - Nebula</p>
                     <s class = "product_price">€15.99</s>
                     <p class = "sale_price">€12.99</p>
+                    <button class="buy-btn">Buy</button>
                 </div>
             </a>
             <a href="Product_Detail.html" class="product-link">
@@ -121,6 +126,7 @@
                     <p class = "product_name">Funko Pop! - Spider-Man</p>
                     <s class = "product_price">€15.99</s>
                     <p class = "sale_price">€12.99</p>
+                    <button class="buy-btn">Buy</button>
                 </div>
             </a>
         </div>
