Implemented Successful payment page, and linked it to other pages

--- a/HTML - Pages/Delivery.html
+++ b/HTML - Pages/Delivery.html
@@ -91,7 +91,7 @@
       </label>
     </div>
 
-    <button class="buy-button">Buy</button>
+    <button class="buy-button" onclick = "window.location.href = 'Payment_Succeeded_Page.html'">Buy</button>
   </div>
 </section>
 
