Linked Sign in / Register page, updated product detail page.

--- a/HTML - Pages/Product_Page.html
+++ b/HTML - Pages/Product_Page.html
@@ -19,8 +19,8 @@
         </div>
 
         <div class = "buttons">
-            <button class = "btn sign_in">Sign in/out</button>
-            <button class = "btn register">Register</button>
+            <button class = "btn sign_in" onclick = "window.location.href = 'SignIn_Register.html'">Sign in/out</button>
+            <button class = "btn register" onclick = "window.location.href = 'SignIn_Register.html'">Register</button>
 
             <a href = "Shopping_Cart.html" class = "shopping_cart_btn" title = "View Cart">
                 <svg viewBox = "0 0 24 24" width = "24" height = "24">
