--- a/HTML - Pages/SignIn_Register.html
+++ b/HTML - Pages/SignIn_Register.html
@@ -27,7 +27,7 @@
         <label for="password">Password</label>
         <input type="password" id="password" placeholder="Value" required>
 
-        <button type="submit">Register / Sign in</button>
+        <button type="submit" onclick = "window.location.href = 'Main_Page.html'">Register / Sign in</button>
       </form>
     </div>
   </div>
