--- a/HTML - Pages/Product_Detail.html
+++ b/HTML - Pages/Product_Detail.html
@@ -20,8 +20,8 @@
         </div>
 
         <div class = "buttons">
-            <button class = "btn sign_in">Sign in/out</button>
-            <button class = "btn register">Register</button>
+            <button class = "btn sign_in" onclick = "window.location.href = 'SignIn_Register.html'">Sign in/out</button>
+            <button class = "btn register" onclick = "window.location.href = 'SignIn_Register.html'">Register</button>
 
             <a href = "Shopping_Cart.html" class = "shopping_cart_btn" title = "View Cart">
                 <svg viewBox = "0 0 24 24" width = "24" height = "24">
@@ -42,10 +42,12 @@
                 <p class="price">€12.99</p>
                 <p class="category">Manga</p>
                 <div class="button-container">
-                    <button class="favorite">
-                        <span class="heart-icon">♡</span> Add to Favourites
-                    </button>
-                    <button class="buy">🛒 Buy</button>
+                    <div class="favorite-wrapper">
+                        <button class="favorite" onclick="alert('Added to favourite products!')">
+                            <span class="heart-icon">♡</span> Add to Favourites
+                        </button>
+                    </div>
+                    <button class="buy" onclick = "window.location.href = 'Shopping_Cart.html'">🛒 Buy</button>
                 </div>
                 <div class="about">
                     <strong>About this product</strong>
